# autoi18n

./: .gitignore  LICENSE  README.md  pyproject.toml
src/autoi18n/: __init__.py  translator.py
tmp/scripts/: scan_structure.py
