[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-i18n-lib"
version = "0.2.2"
description = "Post-render HTML translation for Python projects with OpenAI-backed caching"
authors = [{name = "Andrey Bondarenko", email = "bona.plus2030@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://bona-plus.ru"
Source = "https://github.com/Aalam2000/autoi18n"
Issues = "https://crm.bona-plus.ru"
